2017-11-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Nathan Stratton Treadway <nathanst@ontko.com>
	* perl/Amanda/CheckDump.pm: Fix report of image validated

2017-11-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/file.c (untaint_fgets): Fix

2017-11-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_Recovery_Clerk.pl,
	  installcheck/Amanda_Taper_Scribe.pl, perl/Amanda/CheckDump.pm,
	  perl/Amanda/Chunker/Controller.pm, perl/Amanda/Chunker/Scribe.pm,
	  perl/Amanda/FetchDump.pm, perl/Amanda/Recovery/Clerk.pm,
	  perl/Amanda/Rest/Runs.pm, perl/Amanda/Service/Amidxtaped.pm,
	  perl/Amanda/Service/Restore.pm, perl/Amanda/Taper/Scribe.pm,
	  perl/Amanda/Taper/Worker.pm, perl/Amanda/Vault.pm,
	  server-src/amreindex.pl: s/use base/use parent -norequire,/ for
	  *::Feedback class
	* perl/Amanda/Config/FoldingHash.pm: use 'use parent -norequire' for
	  Tie::StdHash

2017-11-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amgetconf.pl: print an empty string if a parameter is not
	  set instead of 'no such parameter'

2017-11-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c: Allow to unset some setting

2017-11-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Nathan Stratton Treadway <nathanst@ontko.com>
	* common-src/match.c (match_datastamp) Allow "*" wildcard

2017-11-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/dumper.c (process_dumpline): debug once error to write to
	  the state file

2017-11-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c: Do not allow double quote in section name or
	  label

2017-11-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/compile, config/config.guess: Set executable bit

2017-11-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/DB/Catalog2.pm, perl/Amanda/DB/Catalog2/MySQL.pm,